# TSAO-PROCESSING-SKILL

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SKILL.md  manifest.yaml  pyproject.toml  requirements.txt
.bootstrap/: source.b64.part000  source.b64.part001  source.b64.part001-00  source.b64.part001-01  source.b64.part001-02  source.b64.part001-03  source.b64.part002  source.b64.part002-01  source.b64.part002-02  source.b64.part003  source.b64.part004  source.b64.part005  source.b64.part006
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature.yml
.github/workflows/: alpha6-source-cleanup-once.yml  apply-poe-alpha6-once.yml  audit-branches.yml  bootstrap-poe-alpha6-once.yml  ci.yml  cleanup-bootstrap.yml  cleanup-public-bootstrap.yml  consolidate-branches.yml  diagnose-consolidation.yml  (+9 more)
bootstrap/: source.b64.part000  source.b64.part001  source.b64.part002  source.b64.part003  source.b64.part004
docs/: ASSET_LINEAGE.md  CAPABILITY_MATRIX.md  CHANGE_IMPACT.md  DECISION_LOG.md  EVIDENCE_POLICY.md  EXPERIMENT_DESIGN.md  GATE_MODEL.md  HUMAN_IN_THE_LOOP.md  INDEPENDENT_REVIEW.md  INTEGRATION_CONTRACT.md  MAINTAINER_CHECKLIST.md  MEASUREMENT_SYSTEM.md  METRICS.md  MODEL_QUALIFICATION.md  OPEN_PROCESS_ECOSYSTEM.md  OPEN_SOURCE_POSITIONING.md  PROCESS_PACKAGE_INDEX.md  PROJECT_DIRECTORY_CONTRACT.md  PROJECT_ROLES.md  RAW_DATA_POLICY.md  RELEASE_PROCESS.md  RESEARCH_INTEGRITY.md  SCALE_UP_CLAIMS.md  SOURCE_PARITY.md  STATUS_MODEL.md  TEST_STRATEGY.md  THERMODYNAMIC_METHOD.md  UNCERTAINTY_POLICY.md  VERSIONED_ASSET_INGESTION.md  WHY_TSAO.md
prompts/: TSAO_AUTONOMOUS_REFINEMENT_PROMPT.md  TSAO_PROJECT_EXECUTION_PROMPT.md
reports/: ALPHA6_COMPLETENESS_REPORT.md  ALPHA6_FINALIZATION_NOTE.md  ALPHA6_SOURCE_CORE_STATUS.json  ALPHA7_SOURCE_CORE_STATUS.json  ALPHA8_PROCESS_PACKAGE_EPDM_REMEDIATION.md  ALPHA8_SOURCE_CORE_STATUS.json  ASSET_PROVENANCE_ALPHA5.tsv  BRANCH_CONSOLIDATION_2026-07-23.md  CI_RESULTS.json  CI_TRIGGER_POLICY.md  CODE_AUDIT_ALPHA2.md  COMPLETE_DISTRIBUTION_MANIFEST.tsv  COMPLETE_DISTRIBUTION_REFERENCE.json  INITIAL_QUALIFICATION_SUMMARY.md  LINEAGE_COMPLETENESS_AUDIT_ALPHA3.md  LOCAL_FULL_RELEASE_REFERENCE.md  QUALIFICATION_BOUNDARY.md  README.md  RELEASE_IDENTITY.json  SOURCE_CORE_MANIFEST.tsv  SOURCE_PARITY_ALPHA5.json
schemas/: acceptance.schema.json  evidence.schema.json  external_execution.schema.json  gate.schema.json  maturity.schema.json  project.schema.json  scaleup_claim.schema.json  source_asset.schema.json  work_package.schema.json
scripts/: audit_capabilities.py  build_source_asset_manifest.py  export_source_snapshot.py  finalize_alpha8.py  finalize_alpha8_materialize.py  finalize_alpha8_runtime.py  generate_asset_provenance.py  run_ci.py  verify_wheel_contents.py  verify_wheel_runtime.py
skills/: __init__.py
templates/: README.md
tests/: test_archive_security.py  test_asset_provenance_alpha5.py  test_capabilities_alpha4.py  test_capabilities_alpha5.py  test_ci_runner.py  test_contract_schemas_alpha4.py  test_core.py  test_doctor_alpha5.py  test_poe_cli_alpha7.py  test_process_general_alpha4.py  test_provenance_completeness_alpha6.py  test_release_integrity_alpha6.py  test_repository_contracts.py  test_schemas.py  test_subskill_lineage.py  test_wheel_contract.py
tsao/: __init__.py  _utils.py  archive.py  assurance.py  capabilities.py  cli.py  core.py  doctor.py  evidence.py  gates.py  integrity.py  models.py  process_general.py  process_package.py  project.py  provenance.py  routing.py  science.py  snapshot.py
wheelhouse/: tsao_processing_skill-0.1.0a6-py3-none-any.whl
(+162 files in other folders)
