[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsao-processing-skill"
version = "0.1.0a1"
description = "Traceable, scientific, auditable and operational chemical process development skill"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "SUNHAOJUN22"}]
dependencies = ["PyYAML>=6.0", "jsonschema>=4.20", "numpy>=2.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
tsao = "tsao.cli:main"

[tool.setuptools.packages.find]
include = ["tsao*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
